--- a/src/translations/en-US.json
+++ b/src/translations/en-US.json
@@ -1,5 +1,5 @@
 {
-  "APP_NAME": "ngX-Rocket",
+  "APP_NAME": "ngX-Learns",
   "About": "About",
   "Hello world !": "Hello world !",
   "Home": "Home",
@@ -12,5 +12,10 @@
   "Username is required": "Username is required",
   "Username or password incorrect.": "Username or password incorrect.",
   "Remember me": "Remember me",
-  "Version": "Version"
+  "Version": "Version",
+  "my-feature-lang": {
+    "my-component": {
+      "my-translate": "My translate"
+    }
+  }
 }
